--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
 									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/thumbs/01.jpg" alt="" />
+										<img src="images/gallery/CopAcademy/Logo.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Cop Academy</h3>
+										<p>VR (HTC Vive) Party Game in the cop universe. 
+											Used Unity3D and SteamVR. Produced with another game programmer and 3 game designers as a school project of 4 months. 
+											I produced 4 mini games and worked on the initial structure used for the overall management of the game.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -38,11 +40,12 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/thumbs/02.jpg" alt="" />
+										<img src="images/gallery/Immortal_Heart_Defender/screenshot.jpg" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Immortal's Heart Defender</h3>
+										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by me alone in 72 hours. 
+											The concept mainly came from a wave system I was studying on and that I expanded for this game.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -248,7 +251,7 @@
 							<ul class="icons">
 								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-								<li><p class="icon style2 fa-mobile"><span class="label">+33 6 31 41 75 21</span></a></li>
+								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span></a></p>+33 6 31 41 75 21</p></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
