--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 								</article>
 								<article>
 									<a href="images/gallery/fulls/02.jpg" class="image">
-										<img src="images/gallery/Immortal_Heart_Defender/screenshot.jpg" alt="" />
+										<img src="images/gallery/Immortal_Heart_Defender/screenshot.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Immortal's Heart Defender</h3>
