--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="images/gallery/fulls/01.jpg" class="image">
-										<img src="images/gallery/CopAcademy/Logo.jpg" alt="" />
+									<a href="index-old.html">
+										<img src="images/gallery/CopAcademy/Logo.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Cop Academy</h3>
