Test image size.

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="index-old.html">
+									<a href="index-old.html" class="image">
 										<img src="images/gallery/CopAcademy/Logo.png" alt="" />
 									</a>
 									<div class="caption">
@@ -251,7 +251,7 @@
 							<ul class="icons">
 								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span></a></p>+33 6 31 41 75 21</p></li>
+								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span></p>+33 6 31 41 75 21</p></a></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
