Phone number test.

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 							<ul class="icons">
 								<li><a href="#" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
-								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span></p>+33 6 31 41 75 21</p></a></li>
+								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span>+33 6 31 41 75 21</p></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
