--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
 									</a>
 									<div class="caption">
 										<h3>Raspberry Pi 2 API for CCI Hauts-de-France</h3>
-										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by me alone in 72 hours. 
-											The concept mainly came from a wave system I was studying on and that I expanded for this game.</p>
+										<p>API enabling the use of a Raspberry Pi 2 from a distant computer via the wifi. 
+											Made with \textbf{Java} for the distant computer API and \textbf{Python} for the API on the Raspberry Pi (Raspbian). 
+											Worked with electronic parts via the GPIO pins, screen displaying images with basic controls and video.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -70,8 +71,11 @@
 									</a>
 									<div class="caption">
 										<h3>SAM for Surgiris</h3>
-										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by me alone in 72 hours. 
-											The concept mainly came from a wave system I was studying on and that I expanded for this game.</p>
+										<p>Software for the after-sale services of Surgiris. Used Qt(C++). 
+											Made to save time by allowing quick scan and modification of hardware's configuration, 
+											hardware made by Surgiris. This software needed a heavily structured file system 
+											for stocking configurations of many hardwares, and RSA crypting and hash verifications on the stocked configurations 
+											in order to prevent any problem on the hardware.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -155,8 +159,8 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="https://www.linkedin.com/in/steve-delgrange/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span>https://www.linkedin.com/in/steve-delgrange/</a></li>
-								<li><a href="mailto:s.delgrange@rubika-edu.com" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/steve-delgrange/" class="icon style2 fa-linkedin"><span class="label">LinkedIn</span></a></li>
+								<li><a href="mailto:s.delgrange@rubika-edu.com" class="icon style2 fa-envelope"><span class="label">Email</span>s.delgrange@rubika-edu.com</a></li>
 								<li><p class="icon style2 fa-mobile"><span class="label">Cell Number</span>+33 6 31 41 75 21</p></li>
 							</ul>
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
