--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 										<img src="images/gallery/RaspberryPi/raspberryPi.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Raspberry Pi 2 API for CCI Hauts-de-France</h3>
+										<h3>Raspberry Pi 2 API</h3>
 										<p>API enabling the use of a Raspberry Pi 2 from a distant computer via the wifi. 
-											Made with \textbf{Java} for the distant computer API and \textbf{Python} for the API on the Raspberry Pi (Raspbian). 
-											Worked with electronic parts via the GPIO pins, screen displaying images with basic controls and video.</p>
+											Made with Java for the distant computer API and Python for the API on the Raspberry Pi. 
+											Worked with electronic parts, screen displaying images with basic controls and video.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -70,12 +70,11 @@
 										<img src="images/gallery/Surgiris/surgiris.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>SAM for Surgiris</h3>
+										<h3>SAM</h3>
 										<p>Software for the after-sale services of Surgiris. Used Qt(C++). 
-											Made to save time by allowing quick scan and modification of hardware's configuration, 
-											hardware made by Surgiris. This software needed a heavily structured file system 
-											for stocking configurations of many hardwares, and RSA crypting and hash verifications on the stocked configurations 
-											in order to prevent any problem on the hardware.</p>
+											Allowed quick scan and modification of special hardware's configuration. 
+											Needed a heavily structured file system for stocking configurations of many hardwares, 
+											and RSA crypting and hash verifications in order to prevent any problem on the hardware.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
