--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="index-old.html" class="image">
 										<img src="images/gallery/Immortal_Heart_Defender/screenshot.png" alt="" />
 									</a>
 									<div class="caption">
@@ -52,7 +52,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="index-old.html" class="image">
 										<img src="images/gallery/RaspberryPi/raspberryPi.png" alt="" />
 									</a>
 									<div class="caption">
@@ -66,7 +66,22 @@
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/02.jpg" class="image">
+									<a href="index-old.html" class="image">
+										<img src="images/gallery/Surgiris/surgiris.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>SAM</h3>
+										<p>Software for the after-sale services of Surgiris. Used Qt(C++). 
+											Allowed quick scan and modification of special hardware's configuration. 
+											Needed a heavily structured file system for stocking configurations of many hardwares, 
+											and RSA crypting and hash verifications in order to prevent any problem on the hardware.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
+									<a href="index-old.html" class="image">
 										<img src="images/gallery/Surgiris/surgiris.png" alt="" />
 									</a>
 									<div class="caption">
