--- a/index.html
+++ b/index.html
@@ -82,14 +82,13 @@
 								</article>
 								<article>
 									<a href="index-old.html" class="image">
-										<img src="images/gallery/Surgiris/surgiris.png" alt="" />
+										<img src="images/gallery/Scrabble/scrabble.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>SAM</h3>
-										<p>Software for the after-sale services of Surgiris. Used Qt(C++). 
-											Allowed quick scan and modification of special hardware's configuration. 
-											Needed a heavily structured file system for stocking configurations of many hardwares, 
-											and RSA crypting and hash verifications in order to prevent any problem on the hardware.</p>
+										<h3>Scrabble solver</h3>
+										<p>School project in 3rd year. Used Java. An initial grid of scrabble, with all the special cases and the letters already placed, 
+											is given in a file, and another file contains the hand of the player. Using a specific algorithm the letters are placed optimally, 
+											display the result with JavaFX and modify the files accordingly.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
