Scrabble description correction.

--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
 									<div class="caption">
 										<h3>Scrabble solver</h3>
 										<p>School project in 3rd year. Used Java. An initial grid of scrabble, with all the special cases and the letters already placed, 
-											is given in a file, and another file contains the hand of the player. Using a specific algorithm the letters are placed optimally, 
-											display the result with JavaFX and modify the files accordingly.</p>
+											is given in a file, and another file contains the hand of the player. Using a specific algorithm the letters are placed optimally. 
+											It displays the result with JavaFX and modifies the files accordingly.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
