Redirected in index and added another image.

--- a/cop-academy.html
+++ b/cop-academy.html
@@ -42,7 +42,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight01.jpg" alt="" />
+							<img src="images/gallery/CopAcademy/CopAcademyBanner.png" alt="" />
 						</div>
 					</section>
 
