--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
-									<a href="index-old.html" class="image">
+									<a href="cop-academy.html" class="image">
 										<img src="images/gallery/CopAcademy/Logo.png" alt="" />
 									</a>
 									<div class="caption">
