--- a/cop-academy.html
+++ b/cop-academy.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>Cop Academy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-right onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Cop Academy</h1>
 							<p class="major">VR (HTC Vive) Party Game in the cop universe. 
@@ -41,7 +41,7 @@
 								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
-						<div class="image">
+						<div class="image fit">
 							<img src="images/gallery/CopAcademy/CopAcademyBanner.png" alt="" />
 						</div>
 					</section>
