--- a/cop-academy.html
+++ b/cop-academy.html
@@ -46,6 +46,16 @@
 						</div>
 					</section>
 
+					<section>
+							<header>
+								<h3>Images</h3>
+							</header>
+							<div class="content">
+								<h4>Fit</h4>
+								<span class="image fit"><img src="images/banner.jpg" alt="" /></span>
+							</div>
+						</section>
+
 				
 				<!-- Footer -->
 				<footer class="wrapper style1 align-center">
