Square format for logo. Try for fit image wih new section.

--- a/cop-academy.html
+++ b/cop-academy.html
@@ -28,7 +28,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/gallery/CopAcademy/Logo.png" alt="" />
+							<img src="images/gallery/CopAcademy/LogoSquareFormat.png" alt="" />
 						</div>
 					</section>
 
@@ -46,13 +46,11 @@
 						</div>
 					</section>
 
-					<section>
-							<header>
-								<h3>Images</h3>
-							</header>
+					<section class="content-align-center image-position-center">
 							<div class="content">
-								<h4>Fit</h4>
-								<span class="image fit"><img src="images/banner.jpg" alt="" /></span>
+								<h2>Magna etiam feugiat</h2>
+								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>	
+								<span class="image fit"><img src="images/gallery/CopAcademy/CopAcademyBanner.png" alt="" /></span>
 							</div>
 						</section>
 
