--- a/cop-academy.html
+++ b/cop-academy.html
@@ -46,7 +46,7 @@
 						</div>
 					</section>
 
-					<section class="content-align-center image-position-center">
+					<section class="banner style1 content-align-center image-position-center">
 							<div class="content">
 								<h2>Magna etiam feugiat</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>	
