--- a/cop-academy.html
+++ b/cop-academy.html
@@ -50,7 +50,10 @@
 							<div class="content">
 								<h2>Magna etiam feugiat</h2>
 								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>	
-								<span class="image fit"><img src="images/gallery/CopAcademy/CopAcademyBanner.png" alt="" /></span>
+								
+							</div>
+							<div class="image">
+									<span class="image fit"><img src="images/gallery/CopAcademy/CopAcademyBanner.png" alt="" /></span>
 							</div>
 						</section>
 
