--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 										<h3>Cop Academy</h3>
 										<p>VR (HTC Vive) Party Game in the cop universe. 
 											Used Unity3D and SteamVR. Produced with another game programmer and 3 game designers as a school project of 4 months. 
-											I produced 4 mini games and worked on the initial structure used for the overall management of the game.</p>
+											I produced 4 mini games and worked on the initial structure used for the overall management of the game amongst other things.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -54,7 +54,7 @@
 									<div class="caption">
 										<h3>Immortal's Heart Defender</h3>
 										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by me alone in 72 hours. 
-											The concept mainly came from a wave system I was studying on and that I expanded for this game.</p>
+											The concept mainly came from a enemy wave system I was studying on and that I expanded for this game.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -80,10 +80,10 @@
 									</a>
 									<div class="caption">
 										<h3>SAM</h3>
-										<p>Software for the after-sale services of Surgiris. Used Qt(C++). 
+										<p>Software for the after-sales services of Surgiris. Used Qt(C++). 
 											Allowed quick scan and modification of special hardware's configuration. 
 											Needed a heavily structured file system for stocking configurations of many hardwares, 
-											and RSA crypting and hash verifications in order to prevent any problem on the hardware.</p>
+											and RSA crypting and hash verifications in order to prevent any problems on the hardware.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -97,7 +97,7 @@
 										<h3>Scrabble solver</h3>
 										<p>School project in 3rd year. Used Java. An initial grid of scrabble, with all the special cases and the letters already placed, 
 											is given in a file, and another file contains the hand of the player. Using a specific algorithm the letters are placed optimally. 
-											It displays the result with JavaFX and modifies the files accordingly.</p>
+											It displays the result in the console and modifies the files accordingly.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
