Added distributor image

--- a/cop-academy.html
+++ b/cop-academy.html
@@ -76,7 +76,7 @@
 						</section>
 
 				<!-- Four -->
-					<section class="banner style3 content-align-center image-position-center" id="third">
+					<section class="banner style1 content-align-center image-position-right" id="third">
 							<div class="content">
 								<h2>Example of a VR problem</h2>
 								<p>The game with the distributor involved some problems : the fact that I wanted a precise point. 
@@ -89,7 +89,7 @@
 								</ul>
 							</div>
 							<div class="image">
-									<img src="images/gallery/CopAcademy/CopAcademyBanner.png" alt="" />
+									<img src="images/gallery/CopAcademy/Distributor.png" alt="" />
 							</div>
 						</section>
 					
