--- a/cop-academy.html
+++ b/cop-academy.html
@@ -26,7 +26,7 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
 							<h1>Cop Academy</h1>
 							<p class="major">VR (HTC Vive) Party Game in the cop universe. 
@@ -64,8 +64,7 @@
 								<p>At the beginning of the project, I proposed and worked on the flow of the game with an architecture allowing changes on anything without impacting what 
 									should not be impacted (example : changing how the mini games are played will not impact the global flow of a party in any way).
 									I've developed several mini games : a shooting stand, a hot-cold game with a distributor, playing as a CRS member with a stick and a shield, 
-									and lastly a game where you follow the instructions of the informatic service to repare your computer. The game with the distributor involved some problems 
-									with the fact that I wanted a precise point but since both the faces of </p>	
+									and lastly a game where you follow the instructions of the informatic service to repair your computer.</p>	
 								<ul class="actions vertical">
 									<li><a href="#third" class="button big wide smooth-scroll-middle">Example of a VR problem</a></li>
 								</ul>
@@ -79,11 +78,11 @@
 					<section class="banner style1 content-align-center image-position-right" id="third">
 							<div class="content">
 								<h2>Example of a VR problem</h2>
-								<p>The game with the distributor involved some problems : the fact that I wanted a precise point. 
-									Since both the colliders of the distributor and the objects you have in hand are kinematic, I had to make one of them a trigger.
+								<p>The game with the distributor involved a problem : the fact that I wanted a precise point. 
+									Since both the colliders of the distributor and the objects you have in hand are kinematic, I had to change one of them in a trigger.
 									The most obvious choice was the object held in the hand since it can also move other things. So I had to make the distributor's faces' colliders
-									as triggers. But then you don't have contact point, and I resolved it by projecting the closest point on the object on the distributor 
-									and this several times (like 10 times) to get a point close enough to the contact point. The thing is such problem occurs often with VR.</p>	
+									as triggers. But then you don't have contact point, and I resolved it by projecting the closest point of the object to the face on the distributor 
+									and this several times (like 10 times) to get a point close enough to the real contact point. The thing is such problem occurs often with VR.</p>	
 								<ul class="actions vertical">
 									<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
 								</ul>
