--- a/cop-academy.html
+++ b/cop-academy.html
@@ -47,7 +47,7 @@
 								<h2>Background</h2>
 								<p>As a student to become a new cop, you must be put to the test of the Cop Academy ! 
 									Challenge tests that all the most impressive cops around the world have passed with perfect scores !
-									With the other students, make 2 groups and become proud cops !</p>	
+									With the other students, make 2 groups and become the best cop students !</p>	
 								<ul class="actions vertical">
 									<li><a href="#second" class="button big wide smooth-scroll-middle">About my work</a></li>
 								</ul>
