--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 						<div class="inner">
 							<h2>Steve Delgrange</h2>
 							<p>Serious, calm and a quick learner. I search a 2 to 4 month internship in gameplay programming. I am also learning things on shaders, procedural generation and AI.</p>
+							<ul class="actions vertical">
+									<li><a href="cv.html" class="button big wide smooth-scroll-middle">CV</a></li>
+								</ul>
 						</div>
 
 						<!-- Gallery -->
