Added buttons to return and correct image.

--- a/cv.html
+++ b/cv.html
@@ -27,8 +27,11 @@
 
 				<!-- CV -->
 				<section>
+						<ul class="actions vertical">
+								<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
+							</ul>
 						<div class="content">
-							<span class="image fit"><img src="images/banner.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/gallery/CV/CV_Steve_Delgrange_en.png" alt="" /></span>
 						</div>
 					</section>
 					
