--- a/cv.html
+++ b/cv.html
@@ -26,10 +26,12 @@
 			<div id="wrapper" class="divided">
 
 				<!-- CV -->
-				<section>
-						<ul class="actions vertical">
-								<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
-							</ul>
+				<section class="wrapper style1 align-center">
+						<div class="inner">
+							<ul class="actions vertical">
+									<li><a href="cv.html" class="button big wide smooth-scroll-middle">CV</a></li>
+								</ul>
+						</div>
 						<div class="content">
 							<span class="image fit"><img src="images/gallery/CV/CV_Steve_Delgrange_en.png" alt="" /></span>
 						</div>
