--- a/cv.html
+++ b/cv.html
@@ -29,7 +29,7 @@
 				<section class="wrapper style1 align-center">
 						<div class="inner">
 							<ul class="actions vertical">
-									<li><a href="cv.html" class="button big wide smooth-scroll-middle">CV</a></li>
+									<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
 								</ul>
 						</div>
 						<div class="content">
