Added pages for all projects but no details in them.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="index-old.html" class="image">
+									<a href="immortal-heart-defender.html" class="image">
 										<img src="images/gallery/Immortal_Heart_Defender/screenshot.png" alt="" />
 									</a>
 									<div class="caption">
@@ -64,7 +64,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="index-old.html" class="image">
+									<a href="raspberry-pi-api.html" class="image">
 										<img src="images/gallery/RaspberryPi/raspberryPi.png" alt="" />
 									</a>
 									<div class="caption">
@@ -78,7 +78,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="index-old.html" class="image">
+									<a href="sam.html" class="image">
 										<img src="images/gallery/Surgiris/surgiris.png" alt="" />
 									</a>
 									<div class="caption">
@@ -93,7 +93,7 @@
 									</div>
 								</article>
 								<article>
-									<a href="index-old.html" class="image">
+									<a href="scrabble.html" class="image">
 										<img src="images/gallery/Scrabble/scrabble.png" alt="" />
 									</a>
 									<div class="caption">
