--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Steve Delgrange</h2>
-							<p>Serious, calm and a quick learner. I search a 2 to 4 month internship in gameplay programming. I am also learning things on shaders, procedural generation and AI.</p>
+							<p>Serious, calm and a quick learner. I am a student at RUBIKA I am looking for a 2 to 4 month internship in gameplay programming, starting in early June 2018. I am also interested in shader, VR, procedural generation and AI.</p>
 							<ul class="actions vertical">
 									<li><a href="cv.html" class="button big wide smooth-scroll-middle">CV</a></li>
 								</ul>
