Added image for surgiris.

--- a/sam.html
+++ b/sam.html
@@ -38,7 +38,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/gallery/Surigris/surgiris.png" alt="" />
+							<img src="images/gallery/Surgiris/x3mt_detouree_1.png.png" alt="" />
 						</div>
 					</section>
 
