Added ymca and shortened things in index.

--- a/immortal-heart-defender.html
+++ b/immortal-heart-defender.html
@@ -29,8 +29,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
 							<h1>Immortal's Heart Defender</h1>
-							<p class="major">Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by me alone in 72 hours. 
-									The concept mainly came from a enemy wave system I was studying on and that I expanded for this game.</p>
+							<p class="major">Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by me alone in 72 hours. The theme was "A small world".
+									My concept mainly came from a enemy wave system I was studying on and that I expanded for this game.</p>
 							<ul class="actions vertical">
 								<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
 							</ul>
