--- a/ymca.html
+++ b/ymca.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>SAM</title>
+		<title>Cop Academy</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -28,20 +28,47 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
-							<h1>SAM</h1>
-							<p class="major">Software for the after-sales services of Surgiris. Used Qt(C++). 
-									Allowed quick scan and modification of special hardware's configuration. 
-									Needed a heavily structured file system for stocking configurations of many hardwares, 
-									and RSA crypting and hash verifications in order to prevent any problems on the hardware.</p>
+							<h1>YMCA</h1>
+							<p class="major">Local multiplayer game. Used Unity3D. 
+									Made for the Global Game Jam in January 2018 with 3 other game programmers and 2 game designers in 48 hours.
+									</p>
 							<ul class="actions vertical">
-								<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle">About the background</a></li>
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/gallery/Surgiris/x3mt_detouree_1.png" alt="" />
+							<img src="images/gallery/YMCA/title_screen.png" alt="" />
 						</div>
 					</section>
 
+				<!-- Two -->
+					<section class="banner style3 content-align-center image-position-center" id="first">
+							<div class="content">
+								<h2>Background</h2>
+								<p></p>	
+								<ul class="actions vertical">
+									<li><a href="#second" class="button big wide smooth-scroll-middle">About my work</a></li>
+								</ul>
+							</div>
+							<div class="image">
+									<img src="images/gallery/YMCA/title_screen.png" alt="" />
+							</div>
+						</section>
+
+				<!-- Three -->
+					<section class="banner style2 content-align-center image-position-center" id="second">
+							<div class="content">
+								<h2>My work</h2>
+								<p></p>	
+								<ul class="actions vertical">
+										<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
+								</ul>
+							</div>
+							<div class="image">
+									<img src="images/gallery/YMCA/title_screen.png" alt="" />
+							</div>
+						</section>
+					
 				<!-- Footer -->
 				<footer class="wrapper style1 align-center">
 						<div class="inner">
