--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Steve Delgrange</h2>
-							<p>Serious, calm and a quick learner. I am a student at RUBIKA I am looking for a 2 to 4 month internship in gameplay programming, starting in early June 2018. I am also interested in shader, VR, procedural generation and AI.</p>
+							<p>Serious, calm and a quick learner. I am a student at RUBIKA I am looking for a 2 to 4 month internship in gameplay programming, 
+								starting in early June 2018. I am also interested in shader, VR, procedural generation and AI.</p>
 							<ul class="actions vertical">
 									<li><a href="cv.html" class="button big wide smooth-scroll-middle">CV</a></li>
 								</ul>
@@ -37,14 +38,26 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
+									<a href="ymca.html" class="image">
+										<img src="images/gallery/YMCA/title_screen.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>YMCA</h3>
+										<p>Local multiplayer game. Used Unity3D. 
+											Made for the Global Game Jam in January 2018 with 3 other game programmers and 2 game designers in 48 hours.</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
 									<a href="cop-academy.html" class="image">
 										<img src="images/gallery/CopAcademy/Logo.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Cop Academy</h3>
-										<p>VR (HTC Vive) Party Game in the cop universe. 
-											Used Unity3D and SteamVR. Produced with another game programmer and 3 game designers as a school project of 4 months. 
-											I produced 4 mini games and worked on the initial structure used for the overall management of the game amongst other things.</p>
+										<p>VR (HTC Vive) Party Game in the cop universe. Used Unity3D and SteamVR. 
+											Produced with another game programmer and 3 game designers as a school project of 4 months.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -56,8 +69,7 @@
 									</a>
 									<div class="caption">
 										<h3>Immortal's Heart Defender</h3>
-										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by me alone in 72 hours. 
-											The concept mainly came from a enemy wave system I was studying on and that I expanded for this game.</p>
+										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by myself in 72 hours.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -70,8 +82,7 @@
 									<div class="caption">
 										<h3>Raspberry Pi 2 API</h3>
 										<p>API enabling the use of a Raspberry Pi 2 from a distant computer via the wifi. 
-											Made with Java for the distant computer API and Python for the API on the Raspberry Pi. 
-											Worked with electronic parts, screen displaying images with basic controls and video.</p>
+											Used Java for the distant computer API and Python for the API on the Raspberry Pi.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -83,10 +94,7 @@
 									</a>
 									<div class="caption">
 										<h3>SAM</h3>
-										<p>Software for the after-sales services of Surgiris. Used Qt(C++). 
-											Allowed quick scan and modification of special hardware's configuration. 
-											Needed a heavily structured file system for stocking configurations of many hardwares, 
-											and RSA crypting and hash verifications in order to prevent any problems on the hardware.</p>
+										<p>Software for the after-sales services of Surgiris. Used Qt(C++).</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -98,9 +106,7 @@
 									</a>
 									<div class="caption">
 										<h3>Scrabble solver</h3>
-										<p>School project in 3rd year. Used Java. An initial grid of scrabble, with all the special cases and the letters already placed, 
-											is given in a file, and another file contains the hand of the player. Using a specific algorithm the letters are placed optimally. 
-											It displays the result in the console and modifies the files accordingly.</p>
+										<p>School project in 3rd year. Used Java.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
