Added details to ymca.

--- a/ymca.html
+++ b/ymca.html
@@ -30,7 +30,9 @@
 						<div class="content">
 							<h1>YMCA</h1>
 							<p class="major">Local multiplayer game. Used Unity3D. 
-									Made for the Global Game Jam in January 2018 with 3 other game programmers and 2 game designers in 48 hours.
+									Made for the Global Game Jam in January 2018 with 3 other game programmers and 2 game designers in 48 hours. The theme was "Transmission".
+									You control one of the character in the arena and you possess 4 skills. When you touch someone with a skill, you transmit it to him.
+									The only way to win is to have no skill at all and run to the exit before someone give you any skill.
 									</p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">About the background</a></li>
@@ -45,7 +47,8 @@
 					<section class="banner style3 content-align-center image-position-center" id="first">
 							<div class="content">
 								<h2>Background</h2>
-								<p></p>	
+								<p>We took a diversifier : YMCA of the village people. Hence the name of the game "You Must Convey Abilities". 
+									The characters are also based on the village people. About the concept of the game, I was not in the team yet when it was decided so I just followed the flow.</p>	
 								<ul class="actions vertical">
 									<li><a href="#second" class="button big wide smooth-scroll-middle">About my work</a></li>
 								</ul>
@@ -59,7 +62,8 @@
 					<section class="banner style2 content-align-center image-position-center" id="second">
 							<div class="content">
 								<h2>My work</h2>
-								<p></p>	
+								<p>Since we were 4 programmers (with the last one was doing art assets), I was tasked with doing the skill architecture and its transmission. 
+									There was already some work done when I joined but needed heavy rework. I also developed the gun skill and a ray skill, with the ray not put in the final game.</p>	
 								<ul class="actions vertical">
 										<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
 								</ul>
