--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 									<div class="caption">
 										<h3>YMCA</h3>
 										<p>Local multiplayer game. Used Unity3D. 
-											Made for the Global Game Jam in January 2018 with 3 other game programmers and 2 game designers in 48 hours.</p>
+											Made for the Global Game Jam in January 2018 with 3 other game programmers and 2 game designers in 48 hours.
+											The theme was "Transmission".</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -69,7 +70,8 @@
 									</a>
 									<div class="caption">
 										<h3>Immortal's Heart Defender</h3>
-										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by myself in 72 hours.</p>
+										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by myself in 72 hours. 
+											The theme was "A small world".</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
