Updated CV and some texts.

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 									</a>
 									<div class="caption">
 										<h3>Immortal's Heart Defender</h3>
-										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 by myself in 72 hours. 
+										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 in April 2017 by myself in 72 hours. 
 											The theme was "A small world".</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
