--- a/ymca.html
+++ b/ymca.html
@@ -50,6 +50,9 @@
 								<p>We took a diversifier : YMCA of the village people. Hence the name of the game "You Must Convey Abilities". 
 									The characters are also based on the village people. About the concept of the game, I was not in the team yet when it was decided so I just followed the flow.</p>	
 								<ul class="actions vertical">
+									<li><a href="https://globalgamejam.org/2018/games/you-must-convey-abilities-ymca" class="button big wide smooth-scroll-middle">Link to game</a></li>
+								</ul>
+								<ul class="actions vertical">
 									<li><a href="#second" class="button big wide smooth-scroll-middle">About my work</a></li>
 								</ul>
 							</div>
