--- a/cv.html
+++ b/cv.html
@@ -31,6 +31,9 @@
 							<ul class="actions vertical">
 									<li><a href="index.html" class="button big wide smooth-scroll-middle">Return to Home page</a></li>
 								</ul>
+							<ul class="actions vertical">
+									<li><a href="assets/pdf/CV_Steve_Delgrange_en.pdf" class="button big wide smooth-scroll-middle" download>Download PDF CV</a></li>
+								</ul>
 						</div>
 						<div class="content">
 							<span class="image fit"><img src="images/gallery/CV/CV_Steve_Delgrange_en.png" alt="" /></span>
