--- a/index.html
+++ b/index.html
@@ -38,6 +38,20 @@
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
 								<article>
+									<a href="shield-maidens.html" class="image">
+										<img src="images/gallery/ShieldMaidens/Logo_color_Noir.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Shield Maidens</h3>
+										<p>Twin stick shooter with puzzle and combat levels in local multiplayer with 3 players needed. Used Unity3D.
+											Made for a project as student of RUBIKA with me and another programmer, 4 game artists and 5 game designers of the same year in two weeks.
+										</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
+								<article>
 									<a href="ymca.html" class="image">
 										<img src="images/gallery/YMCA/Title_screen_deformed.png" alt="" />
 									</a>
