Update Make the hero.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 						<div class="inner">
 							<h2>Steve Delgrange</h2>
 							<p>Serious, calm and a quick learner. I am a student at RUBIKA I am looking for a 2 to 4 month internship in gameplay programming, 
-								starting in early June 2018. I am also interested in shader, VR, procedural generation and AI.</p>
+								starting in early June 2018. I am also interested in VR, procedural generation and AI.</p>
 							<ul class="actions vertical">
 									<li><a href="cv.html" class="button big wide smooth-scroll-middle">CV</a></li>
 								</ul>
@@ -37,6 +37,19 @@
 
 						<!-- Gallery -->
 							<div class="gallery style2 medium lightbox onscroll-fade-in">
+								<article>
+									<a href="make-the-hero.html" class="image">
+										<img src="images/gallery/Make_The_Hero/logo_Make_the_Hero_tall.png" alt="" />
+									</a>
+									<div class="caption">
+										<h3>Make The Hero</h3>
+										<p>VR solo game mixing RPG/Rogue-like/God-game and where the player creates items with its hands. Used Unity3D. Prototype created to pass the concept in 5th year at Rubika, in two weeks with a game artist and a game designer of the same year.
+										</p>
+										<ul class="actions">
+											<li><span class="button small">Details</span></li>
+										</ul>
+									</div>
+								</article>
 								<article>
 									<a href="shield-maidens.html" class="image">
 										<img src="images/gallery/ShieldMaidens/Logo_color_Noir.png" alt="" />
