--- a/shield-maidens.html
+++ b/shield-maidens.html
@@ -28,7 +28,7 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
-							<h1>YMCA</h1>
+							<h1>Shield Maidens</h1>
 							<p class="major">Twin stick shooter with puzzle and combat levels in local multiplayer with 3 players needed. Used Unity3D.
 								Made for a project as student of RUBIKA with me and another programmer, 4 game artists and 5 game designers of the same year in two weeks.
 								You are a maiden with a shield that can reflect attacks and you can bump things with it. Since you are a team of 3, you must help each other to 
