--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Steve Delgrange</h2>
-							<p>Serious, calm and a quick learner. I am a student at RUBIKA I am looking for a 2 to 4 month internship in gameplay programming, 
-								starting in early June 2018. I am also interested in VR, procedural generation and AI.</p>
+							<p>Serious, calm and a quick learner. As a 5th year student, I am looking for a 6 month internship in Gameplay Programming, 
+								starting in July 2019. I am particularly interested in VR, procedural generation and systemic gameplay.</p>
 							<ul class="actions vertical">
 									<li><a href="cv.html" class="button big wide smooth-scroll-middle">CV</a></li>
 								</ul>
