--- a/make-the-hero.html
+++ b/make-the-hero.html
@@ -40,6 +40,12 @@
 						</div>
 					</section>
 
+					<div>
+						<video style="display:block; width: 70%; margin: 0 auto;" controls>
+							<source src="assets/videos/Make_the_hero_prototype.mp4" type="video/mp4">
+						  Your browser does not support the video tag.
+						</video> 
+					</div>
 				<!-- Two -->
 					<section class="banner style3 content-align-center image-position-center" id="first">
 							<div class="content">
