--- a/cop-academy.html
+++ b/cop-academy.html
@@ -29,9 +29,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
 							<h1>Cop Academy</h1>
-							<p class="major">VR (HTC Vive) Party Game in the cop universe. 
-									Used Unity3D and SteamVR. Produced with another game programmer and 3 game designers as a school project of 4 months. 
-									I produced 4 mini games and worked on the initial structure used for the overall management of the game.</p>
+							<p class="major">VR (HTC Vive) Party Game in the cop universe. Made with Unity3D and SteamVR. Project at RUBIKA with me, another game programmer and 3 game designers in 5 months. I made half of the mini-games and a part of the macro.</p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">About the background</a></li>
 							</ul>
