--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 									</a>
 									<div class="caption">
 										<h3>Make The Hero</h3>
-										<p>VR solo game mixing RPG/Rogue-like/God-game and where the player creates items with its hands. Used Unity3D. Prototype created to pass the concept in 5th year at Rubika, in two weeks with a game artist and a game designer of the same year.
+										<p>VR solo game mixing RPG and God-game where the player crafts items for a little hero to fight against demons. Made with Unity3D and VRTK. 5th year project at RUBIKA with me, 2 artists and 3 designers. I’m at the origin of the project but I focus on programming.
 										</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
@@ -56,8 +56,7 @@
 									</a>
 									<div class="caption">
 										<h3>Shield Maidens</h3>
-										<p>Twin stick shooter with puzzle and combat levels in local multiplayer with 3 players needed. Used Unity3D.
-											Made for a project as student of RUBIKA with me and another programmer, 4 game artists and 5 game designers of the same year in two weeks.
+										<p>Twin stick shooter with puzzle and combat levels in local multiplayer with 3 players needed. Made with Unity3D. Project at RUBIKA with me, another programmer, 4 artists and 5 designers in two weeks. I made the players' controller, and the macro.
 										</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
@@ -70,8 +69,8 @@
 									</a>
 									<div class="caption">
 										<h3>YMCA</h3>
-										<p>Local multiplayer game. Used Unity3D. 
-											Made for the Global Game Jam in January 2018 with 3 other game programmers and 2 game designers in 48 hours.
+										<p>Local multiplayer game. Made with Unity3D. 
+											Made for the Global Game Jam in January 2018 with me, 3 other programmers and 2 game designers in 48 hours.
 											The theme was "Transmission".</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
@@ -84,8 +83,7 @@
 									</a>
 									<div class="caption">
 										<h3>Cop Academy</h3>
-										<p>VR (HTC Vive) Party Game in the cop universe. Used Unity3D and SteamVR. 
-											Produced with another game programmer and 3 game designers as a school project of 4 months.</p>
+										<p>VR (HTC Vive) Party Game in the cop universe. Made with Unity3D and SteamVR. Project at RUBIKA with me, another game programmer and 3 game designers in 5 months. I made half of the mini-games and a part of the macro.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -97,7 +95,7 @@
 									</a>
 									<div class="caption">
 										<h3>Immortal's Heart Defender</h3>
-										<p>Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 in April 2017 by myself in 72 hours. 
+										<p>Short & very easy bullet hell. Made with Unity3D. Made for the Ludum Dare 38 in April 2017 in 72 hours. 
 											The theme was "A small world".</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
@@ -111,7 +109,7 @@
 									<div class="caption">
 										<h3>Raspberry Pi 2 API</h3>
 										<p>API enabling the use of a Raspberry Pi 2 from a distant computer via the wifi. 
-											Used Java for the distant computer API and Python for the API on the Raspberry Pi.</p>
+											Made with Java for the distant computer API and Python for the API on the Raspberry Pi.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -123,7 +121,7 @@
 									</a>
 									<div class="caption">
 										<h3>SAM</h3>
-										<p>Software for the after-sales services of Surgiris. Used Qt(C++).</p>
+										<p>Software for the after-sales services of Surgiris. made with Qt(C++).</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -135,7 +133,7 @@
 									</a>
 									<div class="caption">
 										<h3>Scrabble solver</h3>
-										<p>School project in 3rd year. Used Java.</p>
+										<p>School project in 3rd year. Made with Java.</p>
 										<ul class="actions">
 											<li><span class="button small">Details</span></li>
 										</ul>
