--- a/make-the-hero.html
+++ b/make-the-hero.html
@@ -29,8 +29,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-center">
 						<div class="content">
 							<h1>Make The Hero</h1>
-							<p class="major">VR solo game mixing RPG/Rogue-like/God-game and where the player creates items with its hands. Used Unity3D. Prototype created to pass the concept in 5th year at Rubika, in two weeks with a game artist and a game designer of the same year. The concept is that you are the god of crafting and you must defeat the demon lord from conquering a world under your management. You create and help a hero who is in the world, fighting and progressing, while you watch him. The hero gives you the loot and you can use these ressources to craft at your workshops. You can create equipment like sword and armor in the smithy, potions in the alchemy lab and magic scrolls in the scriptorium. You can then give them to the hero by placing the items in the corld near him. Since the hero is an AI, he will do as he wish and you have limited control on him.
-									</p>
+							<p class="major">VR solo game mixing RPG and God-game where the player crafts items for a little hero to fight against demons. Made with Unity3D and VRTK. 5th year project at RUBIKA with me, 2 artists and 3 designers. I’m at the origin of the project but I focus on programming.</p>
 							<ul class="actions vertical">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">About the background</a></li>
 							</ul>
