--- a/sam.html
+++ b/sam.html
@@ -29,7 +29,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
 							<h1>SAM</h1>
-							<p class="major">Software for the after-sales services of Surgiris. Used Qt(C++). 
+							<p class="major">Software for the after-sales services of Surgiris. Made with Qt(C++). 
 									Allowed quick scan and modification of special hardware's configuration. 
 									Needed a heavily structured file system for stocking configurations of many hardwares, 
 									and RSA crypting and hash verifications in order to prevent any problems on the hardware.</p>
