--- a/scrabble.html
+++ b/scrabble.html
@@ -29,7 +29,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
 							<h1>Scrabble solver</h1>
-							<p class="major">School project in 3rd year. Used Java. An initial grid of scrabble, with all the special cases and the letters already placed, 
+							<p class="major">School project in 3rd year. Made with Java. An initial grid of scrabble, with all the special cases and the letters already placed, 
 									is given in a file, and another file contains the hand of the player. Using a specific algorithm the letters are placed optimally. 
 									It displays the result in the console and modifies the files accordingly.</p>
 							<ul class="actions vertical">
