--- a/shield-maidens.html
+++ b/shield-maidens.html
@@ -29,8 +29,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
 							<h1>Shield Maidens</h1>
-							<p class="major">Twin stick shooter with puzzle and combat levels in local multiplayer with 3 players needed. Used Unity3D.
-								Made for a project as student of RUBIKA with me and another programmer, 4 game artists and 5 game designers of the same year in two weeks.
+							<p class="major">Twin stick shooter with puzzle and combat levels in local multiplayer with 3 players needed. Made with Unity3D.
+								Project at RUBIKA with me, another programmer, 4 artists and 5 designers in two weeks.
 								You are a maiden with a shield that can reflect attacks and you can bump things with it. Since you are a team of 3, you must help each other to 
 								solve the puzzles and defeat the enemies. Your only source of damage is every attack that is sent to you and if reflected correctly will 
 								deal damage or activate a receptacle.
