--- a/immortal-heart-defender.html
+++ b/immortal-heart-defender.html
@@ -29,7 +29,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
 							<h1>Immortal's Heart Defender</h1>
-							<p class="major">Short & easy shoot'em up. Used Unity3D. Made for the Ludum Dare 38 in April 2017 by me alone in 72 hours. The theme was "A small world".
+							<p class="major">Short & very easy bullet hell up. Made with Unity3D. Made for the Ludum Dare 38 in April 2017 in 72 hours. The theme was "A small world".
 									My concept mainly came from a enemy wave system I was studying on and that I expanded for this game.</p>
 							<ul class="actions vertical">
 								<li><a href="https://ldjam.com/events/ludum-dare/38/immortals-heart-defender" class="button big wide smooth-scroll-middle">Link to game</a></li>
