--- a/ymca.html
+++ b/ymca.html
@@ -29,8 +29,8 @@
 					<section class="banner style1 orient-left content-align-left image-position-right">
 						<div class="content">
 							<h1>YMCA</h1>
-							<p class="major">Local multiplayer game. Used Unity3D. 
-									Made for the Global Game Jam in January 2018 with 3 other game programmers and 2 game designers in 48 hours. The theme was "Transmission".
+							<p class="major">Local multiplayer game. Made with Unity3D. 
+									Made for the Global Game Jam in January 2018 with me, 3 other programmers and 2 designers in 48 hours. The theme was "Transmission".
 									You control one of the character in the arena and you possess 4 skills. When you touch someone with a skill, you transmit it to him.
 									The only way to win is to have no skill at all and run to the exit before someone give you any skill.
 									</p>
